--- a/acxi.1
+++ b/acxi.1
@@ -8,15 +8,14 @@ acxi  \- Command line audio conversion tool
 
 .SH DESCRIPTION
 \fBacxi\fR is a command line audio conversion program. It converts and syncs
-all desired files to a lossless directory location. Supports lossless formats
-flac/wav/raw. Output formats are ogg or mp3.
+all desired source lossless files to a lossy directory location. Supports 
+lossless formats flac/wav/raw. Output formats are ogg or mp3.
 
-The main utility is syncing your lossless music directory to a corresponding
-lossy format location.
-
-By default, will also copy over most common filetypes like gif, jpg, png, 
+By default, it will also copy over most common filetypes like gif, jpg, png, 
 txt, pdf, doc, docx, and a few others. You can change the defaults using 
 a configuration file.
+
+The destination directory cannot be the same as the source directory.
 
 .SH USING OPTIONS
 Options can be combined if they do not conflict. You can either group the letters
@@ -134,13 +133,14 @@ not need this
 .TP
 .B SOURCE/DESTINATION DIRECTORIES
 
-NOTE: DESTINATION_DIRECTORY cannot be located inside of SOURCE_DIRECTORY
+NOTE: DESTINATION_DIRECTORY cannot be the same as SOURCE_DIRECTORY.
 
-\fBSOURCE_DIRECTORY\fR Sample: \fBSOURCE_DIRECTORY=/home/fred/music/main\fR 
+\fBSOURCE_DIRECTORY\fR Sample: \fBSOURCE_DIRECTORY=/home/fred/music\fR 
 This the original, working, like flac, wav, etc.
 
 \fBDESTINATION_DIRECTORY\fR Sample: \fBDESTINATION_DIRECTORY=/home/fred/music/ogg\fR
-This is the processed compressed music files, ie, ogg, mp3.
+This is the processed compressed music files, ie, ogg, mp3. Destination cannot 
+be the same as Source directory.
 
 .TP
 .B INPUT/OUTPUT
