Added --test option to check configurations without doing actual copy/sync of files.

--- a/acxi.1
+++ b/acxi.1
@@ -86,6 +86,11 @@ Turns off all screen output, except for error messages.
 .TP
 .B \-s\fR,\fB \-\-source\fR
 Path to the top-most directory containing your source files (eg, flac).
+
+.TP
+.B \-\-test\fR
+Test your configurations without actually doing the copy and sync 
+operations. Activates \fB \-\-debug\fR as well for more complete output.
                   
 .TP
 .B \-\-verbose\fR
