--- a/acxi.1
+++ b/acxi.1
@@ -189,7 +189,7 @@ the largest file size / highest quality.
 here or in config file by setting to desired verbosity level here directly,
 or in the configuration file. 
 
-0 \- quiet/silent \- no output at all.
+0 \- quiet/silent \- no output at all (except for errors).
 
 1 \- default \- single line per operation. This is the default, so you don't need 
 to change it.
