small help menu glitch

--- a/acxi.1
+++ b/acxi.1
@@ -113,9 +113,9 @@ Show acxi version.
 acxi will read its configuration/initialization files in the
 following order:
 
-\fB/etc/acxi.conf\fR contains the default configurations. These can be overridden
-by user configurations found in one of the following locations. If 
-\fB$XDG_CONFIG_HOME/acxi.conf\fR exists, it use it, else if
+\fB/etc/acxi.conf\fR contains the default configurations. These can be 
+overridden by user configurations found in one of the following locations.
+ If \fB$XDG_CONFIG_HOME/acxi.conf\fR exists, it use it, else if
 \fB$HOME/.conf/acxi.conf\fR exists, it will use it, and as a last default,
 the legacy location \fB$HOME/.acxi.conf\fR is used, i.e.:
 
@@ -138,10 +138,10 @@ The following set your system path for the required applications:
 
 \fBCOMMAND_LAME\fR Sample: \fBCOMMAND_LAME=/usr/bin/lame\fR (default path)
 
-\fBCOMMAND_METAFLAC\fR Sample: \fBCOMMAND_METAFLAC=/usr/bin/metaflac\fR (default path)
-Metaflac is required ONLY for flac to mp3, to copy over the ID3 tags
-If you are not going to make MP3s, only OGG files for output, you do 
-not need this
+\fBCOMMAND_METAFLAC\fR Sample: \fBCOMMAND_METAFLAC=/usr/bin/metaflac\fR 
+(default path) Metaflac is required ONLY for flac to mp3, to copy over the 
+ID3 tags If you are not going to make MP3s, only OGG files for output, you 
+do not need this
 
 .TP
 .B SOURCE/DESTINATION/CONFIGURATION DIRECTORIES
