fixed - escapes in man page

--- a/acxi.1
+++ b/acxi.1
@@ -179,10 +179,10 @@ to override the default file types acxi will sync. Set to 'none',
 if you only want to sync the music files, not copy over images, text files,
 etc.
 
-\fBQUALITY_MP3\fR Sample: \fBINPUT_MP3=2\fR Supported values: 0-9. 0 is 
+\fBQUALITY_MP3\fR Sample: \fBINPUT_MP3=2\fR Supported values: 0\-9. 0 is 
 the largest file size / highest quality.
 
-\fBQUALITY_OGG\fR Sample: \fBINPUT_OGG=8\fR Supported values: 1-10. 10 is 
+\fBQUALITY_OGG\fR Sample: \fBINPUT_OGG=8\fR Supported values: 1\-10. 10 is 
 the largest file size / highest quality.
 
 .TP
