--- a/acxi.1
+++ b/acxi.1
@@ -237,9 +237,10 @@ the largest file size / highest quality.
 
 .TP
 .B DEBUG OUTPUT
-\fBLOG_LEVEL\fR Sample: \fBLOG_LEVEL=3\fR You can turn these to always on either
-here or in config file by setting to desired verbosity level here directly,
-or in the configuration file. 
+\fBLOG_LEVEL\fR Sample: \fBLOG_LEVEL=3\fR 
+You can turn these to always on either at the top of the \fBacxi\fR file itself, 
+or in the configuration file, by setting the verbosity/debugging level to what 
+you want. 
 
 0 \- quiet/silent \- no output at all (except for errors).
 
