--- a/acxi.1
+++ b/acxi.1
@@ -237,10 +237,11 @@ the largest file size / highest quality.
 
 .TP
 .B DEBUG OUTPUT
-\fBLOG_LEVEL\fR Sample: \fBLOG_LEVEL=3\fR 
-You can turn these to always on either at the top of the \fBacxi\fR file itself, 
+You can change \fBLOG_LEVEL\fR either at the top of the \fBacxi\fR file itself, 
 or in the configuration file, by setting the verbosity/debugging level to what 
 you want. 
+
+Sample: \fBLOG_LEVEL=3\fR 
 
 0 \- quiet/silent \- no output at all (except for errors).
 
