added --no-nlink to override and restore default 1 value.

--- a/acxi.1
+++ b/acxi.1
@@ -109,6 +109,11 @@ on \fBsamba\fR for example. If you encounter issues with the default value,
 please post an issue on the acxi github page.
 
 .TP
+.B \-\-no\-nlink\fR
+Set \fB$File::Find::dont_use_nlink = 1\fR. This is the default value. 
+See \fB\-\-no\-nlink\fR for details.
+
+.TP
 .B \-o [mp3|ogg|opus]\fR, \fB\-\-output [mp3|ogg|opus]\fR
 Output type. Supported types: ogg, opus, mp3
 
