--- a/acxi.1
+++ b/acxi.1
@@ -101,8 +101,8 @@ Input type. Supported types: flac, wav, raw. mp3 only supports flac input.
 
 .TP
 .B \-\-nlink\fR
-Set \fB$File::Find::dont_use_nlink = 0\fR. Default is \fB1\fR. Only change this if you have
-a reason to do so. See this thread for an explanation:
+Set \fB$File::Find::dont_use_nlink = 0\fR. Default is \fB1\fR. Only change this 
+if you have a reason to do so. See this thread for an explanation:
 \fIhttps://www.perlmonks.org/?node_id=1180606\fR
 Setting value to \fB0\fR may make \fBcifs\fR type file system reads fail, 
 on \fBsamba\fR for example. If you encounter issues with the default value,
