--- a/acxi.1
+++ b/acxi.1
@@ -1,12 +1,12 @@
-.TH ACXI 1 "2019\-07\-04" acxi "acxi manual"
+.TH ACXI 1 "2019\-07\-06" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
 \fBacxi\fR [\fB\-\-clean\fR] [\fB\-c\fR extensions] [\fB\-\-debug\fR] 
 [\fB\-\-default\fR] [\fB\-d\fR destination-path] [\fB\-f\fR] [\fB\-h\fR] 
-[\fB\-i\fR input-type] [\fB\-o\fR output-type] [\fB\-q\fR number] 
-[\fB\-\-quiet\fR] [\fB\-s\fR source-path] [\fB\-V\fR] [\fB\-\-test\fR] 
-[\fB\-v\fR]
+[\fB\-i\fR input-type] [\fB\-\-nlink\fR] [\fB\-\-no\-nlink\fR] 
+[\fB\-o\fR output-type] [\fB\-q\fR number] [\fB\-\-quiet\fR] 
+[\fB\-s\fR source-path] [\fB\-V\fR] [\fB\-\-test\fR] [\fB\-v\fR]
 
 .SH DESCRIPTION
 \fBacxi\fR is a command line audio conversion program. It converts and syncs
@@ -102,16 +102,18 @@ Input type. Supported types: flac, wav, raw. mp3 only supports flac input.
 .TP
 .B \-\-nlink\fR
 Set \fB$File::Find::dont_use_nlink = 0\fR. Default is \fB1\fR. Only change this 
-if you have a reason to do so. See this thread for an explanation:
+if you have a reason to do so. Setting value to \fB0\fR may make \fBcifs\fR type 
+file system reads fail, on a \fBsamba\fR network share for example. If you 
+encounter issues with the default value, please post an issue on the acxi 
+github page.
+
+See this PerlMonks thread for an explanation: 
 \fIhttps://www.perlmonks.org/?node_id=1180606\fR
-Setting value to \fB0\fR may make \fBcifs\fR type file system reads fail, 
-on \fBsamba\fR for example. If you encounter issues with the default value,
-please post an issue on the acxi github page.
 
 .TP
 .B \-\-no\-nlink\fR
 Set \fB$File::Find::dont_use_nlink = 1\fR. This is the default value. 
-See \fB\-\-no\-nlink\fR for details.
+See \fB\-\-nlink\fR for details.
 
 .TP
 .B \-o [mp3|ogg|opus]\fR, \fB\-\-output [mp3|ogg|opus]\fR
@@ -255,10 +257,12 @@ the largest file size / highest quality.
 The following are advanced options which should only be used if you know
 what you are doing:
 
-\fBDONT_USE_NLINK\fR Sample: \fBDONT_USE_NLINK=0\fR This sets 
-\fBFile::Find::dont_use_nlink to \fB0\fR or \fB1\fR. \fB1\fR is default. Generally
-you should be using \fB1\fR, but in certain cases \fB0\fR may be faster in some 
-situation. Test using the \fB\-\-nlink\fR option to disable nlink.
+\fBDONT_USE_NLINK\fR Sample: \fBDONT_USE_NLINK=0\fR 
+
+This sets \fBFile::Find::dont_use_nlink to \fB0\fR or \fB1\fR. \fB1\fR is 
+default. Generally you should be using \fB1\fR, but in certain cases \fB0\fR 
+may be faster. Test using the \fB\-\-nlink\fR option to disable nlink, and 
+see that option for more information.
 
 .TP
 .B DEBUG OUTPUT
@@ -302,7 +306,7 @@ You can also visit
 .B acxi
 is a fork and full rewrite of flac2ogg.pl.
 
-Copyright (c) Harald Hope, 2010\-2018
+Copyright (c) Harald Hope, 2010\-2019
 
 MP3 tagging: Odd Eivind Ebbesen \- \fIwww.oddware.net\fR \- 
 <oddebb at gmail dot com>
