--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2019\-07\-06" acxi "acxi manual"
+.TH ACXI 1 "2019\-07\-07" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -21,8 +21,8 @@ The destination directory cannot be the same as the source directory, but
 it can be inside of the source directory.
 
 \fBacxi\fR runs pretests on each start to make sure input and output
-directories exist, conversion programs for input and output formats 
-exist on system, and conversion quality values are valid.
+directories are valid, conversion programs for input and output formatting
+programs are present, and other user values are correct.
 
 .SH USING OPTIONS
 
@@ -30,9 +30,8 @@ For example:
 .B acxi
 \fB\-o mp3\fR or \fBacxi \-fo opus\fR or \fBacxi \-d /home/you/music\fR
 
-Note that some short form options have long form equivalents, which are
-listed below. However, usually the short form is used in examples in order to
-keep things simple.
+Note that some options have long and short formss. The short form is used
+when available in examples in order to keep things simple.
 
 .SH OPTIONS
 
