--- a/acxi.1
+++ b/acxi.1
@@ -30,7 +30,7 @@ For example:
 .B acxi
 \fB\-o mp3\fR or \fBacxi \-fo opus\fR or \fBacxi \-d /home/you/music\fR
 
-Note that some options have long and short formss. The short form is used
+Note that some options have long and short forms. The short form is used
 when available in examples in order to keep things simple.
 
 .SH OPTIONS
