--- a/acxi.1
+++ b/acxi.1
@@ -324,6 +324,8 @@ is a fork and full rewrite of flac2ogg.pl.
 
 Copyright (c) Harald Hope, 2010\-2019
 
+Forking logic:  prupert. 2019-07
+
 MP3 tagging: Odd Eivind Ebbesen \- \fIwww.oddware.net\fR \- 
 <oddebb at gmail dot com>
 
