added -F for --fork

--- a/acxi.1
+++ b/acxi.1
@@ -92,7 +92,7 @@ exist. This is useful if you for example want to change compression
 quality on existing files.
 
 .TP
-.B \-\-fork [1-xx]\fR
+.B \-F\fR, \fB\-\-fork [1-xx]\fR
 Uses Perl module \fBParallel::ForkManager\fR to allow for forking of audio
 file conversions actions. This can speed up your syncing a lot depending on how 
 many threads your CPU can support and how many you assign with this option.
