reorganized help menu to be more clear

--- a/acxi.1
+++ b/acxi.1
@@ -89,6 +89,7 @@ opus output. Same as \fB\-\-log 3\fR
 .TP
 .B \-\-default\fR
 Single line per operation screen output, default value for acxi.
+Same as \fB\-\-log 1\fR
 
 .TP
 .B \-d [path]\fR, \fB\-\-destination [path]\fR
@@ -183,7 +184,8 @@ of the existing files.
 
 .TP
 .B \-\-quiet\fR, \fB\-\-silent\fR
-Turns off all screen output, except for error messages.
+Turns off all screen output, except for error messages. 
+Same as \fB\-\-log 0\fR
 
 .TP
 .B \-s [path]\fR, \fB\-\-source [path]\fR
